@@ -1,3 +1,13 @@
+2007-11-01  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Alexey.
+
+        Make sure we send the correct events for Capslock, Shift, Ctrl, Alt and the Windows key        
+
+        * platform/win/KeyEventWin.cpp:
+        (WebCore::keyIdentifierForWindowsKeyCode):
+        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
+
 2007-11-01  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Maciej Stachowiak.
